# TinyLex

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  old.test.tinylex  test.sh  test.tinylex
include/: debug.h  expression.h  expression.hpp  generator.h  lexer.h  lexer.hpp  parser.h  parser.hpp
include/generator/: generator.hpp  generator_c.hpp  generator_cpp.hpp
source/: TinyLex.cpp  expression.c  expression.cpp  lexer.c  lexer.cpp  parser.c  parser.cpp  tinylex.c
source/generator/: generator.c  generator.cpp  generator_c.c  generator_c.cpp  generator_cpp.c  generator_cpp.cpp  generator_ctype.c
templates/: template.c
templates/c/: c_header.txt  c_implement.txt
templates/cpp/: cpp_header.txt  cpp_implement.txt  cpp_tinylib.txt
tests/: run.sh  test.c  test.cpp
tests/any/: any.tinylex  expected.txt  run.sh
tests/float/: expected.txt  float.tinylex  run.sh  test.txt
tests/keywords/: expected.txt  keywords.tinylex  test.txt
tests/one_or_more/: expected.txt  one_or_more.tinylex  test.txt
tests/optional/: expected.txt  optional.tinylex  test.txt
tests/range/: expected.txt  range.tinylex  test.txt
tests/range_not/: expected.txt  range_not.tinylex  test.txt
tests/range_optional/: expected.txt  range_optional.tinylex  test.txt
tests/range_special/: expected.txt  range_special.tinylex  test.txt
tests/symbols/: expected.txt  symbols.tinylex  test.txt
tinylex/: header.h  implemenation.h
tinylex/c/: c_header.h  c_implement.txt
tinylex/cpp/: cpp_header.txt  cpp_implement.txt  header.txt  implement.txt
